--- a/src/app/shared/dashboard/dashboard.html
+++ b/src/app/shared/dashboard/dashboard.html
@@ -1,1 +1,2 @@
 <p class="text-center text-3xl text-blue-600">FUNCIONA EL LOGIN MI FAFAI</p>
+<!-- TODO desactivar mensaje de error cuando borre el correo incorrecta -->
