--- a/src/app/auth/forgot-password/forgot-password.html
+++ b/src/app/auth/forgot-password/forgot-password.html
@@ -1,6 +1,7 @@
+
 <div class="login-container">
     <div class="container">
-        <form [formGroup]="loginForm">
+        <form>
             <div class="login-header">
                 <img class="logo" src="assets/images/truck-logo.png" alt="logo">
                 <div class="login-title">
@@ -8,29 +9,30 @@
                     <p class="text-4xl font-bold text-white tracking-wider">Shipping</p>
                 </div>
             </div>
+            <h2 class="text-4xl my-4 text-white text-center font-bold tracking-wider">Forgot password</h2>
             <div class="input-fields">
                 <mat-form-field>
-                    <input matInput class="email-input" type="text" placeholder="Email address" formControlName="email" (input)="onEmailInputChange($event)">
+                    <input matInput class="email-input" type="text" placeholder="Email address" [formControl]="email">
                     <!-- <div class="icon-container"> -->
                         <mat-icon matPrefix fontIcon="mail"></mat-icon>
                     <!-- </div> -->
                 </mat-form-field>
-                <mat-form-field>
-                    <input matInput class="password-input" type="password" placeholder="Password" formControlName="password">
-                    <mat-icon matPrefix fontIcon="lock"></mat-icon>
-                </mat-form-field>
-                @if(loginFailed){
-                    <p class="text-center text-red-500 text-2xl">{{loginFailMessage}}</p>
+                @if(recoveryEmailFailed){
+                    <p class="text-center text-red-500 text-2xl">{{errorMessage}}</p>
+                }
+                @if(emailSendSuccesfully){
+                    <p class="text-center text-green-400 text-2xl">{{errorMessage}}</p>
                 }
             </div> 
+            
             <div class="btn-login">
-                <button matButton="tonal" (click)="login(this.loginForm.value)">Log in</button>
+                <button matButton="tonal" type="button" (click)="handleRecoveryEmail()">Send recovery code</button>
             </div>
             
             <div class="links-container">
-                <a class="link" routerLink="/auth/forgot-password">Forgot password?</a>
+                <a class="link" routerLink="/auth/login">Sign in</a>
                 <br>
-                <a class="link" href="#">Create an account</a>
+                <a class="link" routerLink="/create-account">Create an account</a>
             </div>
         </form>
     </div>
