fix: error and succesfull message logic optimized

--- a/src/app/auth/forgot-password/forgot-password.html
+++ b/src/app/auth/forgot-password/forgot-password.html
@@ -1,7 +1,7 @@
 
 <div class="login-container">
     <div class="container">
-        <form>
+        <form (ngSubmit)="handleRecoveryEmail($event)" [formGroup]="form">
             <div class="login-header">
                 <img class="logo" src="assets/images/truck-logo.png" alt="logo">
                 <div class="login-title">
@@ -12,21 +12,23 @@
             <h2 class="text-4xl my-4 text-white text-center font-bold tracking-wider">Forgot password</h2>
             <div class="input-fields">
                 <mat-form-field>
-                    <input matInput class="email-input" type="text" placeholder="Email address" [formControl]="email">
+                    <input matInput class="email-input" type="text" placeholder="Email address" formControlName="email">
                     <!-- <div class="icon-container"> -->
                         <mat-icon matPrefix fontIcon="mail"></mat-icon>
                     <!-- </div> -->
                 </mat-form-field>
-                @if(recoveryEmailFailed){
-                    <p class="text-center text-red-500 text-2xl">{{errorMessage}}</p>
+                @if(isLoaderActive){
+                    <div class="loader-container flex justify-center">
+                        <div class="loader text-center"></div>
+                    </div>
                 }
-                @if(emailSendSuccesfully){
-                    <p class="text-center text-green-400 text-2xl">{{errorMessage}}</p>
+                @if(showMessage()){
+                    <p class="text-center text-[1rem]" [ngClass]="{'text-green-400': response.type === 'success', 'text-red-500': response.type === 'error'}">{{response.message}}</p>
                 }
             </div> 
             
             <div class="btn-login">
-                <button matButton="tonal" type="button" (click)="handleRecoveryEmail()">Send recovery code</button>
+                <button matButton="tonal" type="submit">Send recovery code</button>
             </div>
             
             <div class="links-container">
