--- a/src/app/auth/forgot-password/forgot-password.scss
+++ b/src/app/auth/forgot-password/forgot-password.scss
@@ -123,3 +123,14 @@ input{
 .link:hover{
     text-decoration: underline;
 }
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 40px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 8px solid lightblue;
+  border-right-color: #8BAABE;
+  animation: l2 1s infinite linear;
+}
+@keyframes l2 {to{transform: rotate(1turn)}}
