feat: create user added

--- a/src/app/auth/login/login.html
+++ b/src/app/auth/login/login.html
@@ -30,7 +30,7 @@
             <div class="links-container">
                 <a class="link" routerLink="/auth/forgot-password">Forgot password?</a>
                 <br>
-                <a class="link" href="#">Create an account</a>
+                <a class="link" routerLink="/auth/create-account">Create an account</a>
             </div>
         </form>
     </div>
